update to unity 2020

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /UserSettings
+/Temp
+/obj/Debug
+/Logs
+/Library
+/Interactive-Erosion.sln
+/Assembly-CSharp.csproj
+/.vs/Interactive-Erosion/v16/TestStore/0
+/.vs/Interactive-Erosion/v16
